ansible/roles/fission/files/router-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fission-router-ingress
  namespace: fission
spec:
  ingressClassName: traefik
  rules:
  - host: functions.home.beabys.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router
            port:
              number: 80
